--- a/preamble/SoM.tex
+++ b/preamble/SoM.tex
@@ -119,116 +119,12 @@
 \iflatexml
 
 
-% === Hack to fix incorrect spacing before mdframed theorem in TeXLive 2024
-% === only works for pdflatex
-\usepackage{ifpdf}
-\newlength\thmboxoffset
-\ifpdftex
-    \def\gettexliveversion#1(#2 #3 #4#5#6#7#8)#9\relax{#4#5#6#7}
-    \edef\texliveversion{\expandafter\gettexliveversion\pdftexbanner\relax}
-    \ifnum\texliveversion=2024
-      \setlength{\thmboxoffset}{\parskip}
-    \fi
-\fi
-% ===
-
 %\theoremstyle{remark}
 %\newtheorem*{solution}{Solution}
 
 \pgfplotsset{compat=1.16}
 \else
-% Theorem styles (sequential numbering, indexed on chapter (if it exists) or section)
-% PDF-only settings
-% Official UoE brand colours
-\definecolor{UoESoMGrey}{HTML}{c6d1d6}
-\definecolor{UoESoMLightBlue}{HTML}{009baa}
-\definecolor{UoESoMDarkOrange}{HTML}{c66005}
-\definecolor{UoESoMDarkBlue}{HTML}{002654}
 
-\usepackage{mdframed}
-
-% Define styles for mdframed
-% Define styles for mdframed
-\mdfdefinestyle{UoESomStatement}{
-    linecolor=UoESoMDarkOrange,
-    backgroundcolor=UoESoMDarkOrange!3!white,
-    leftline=true,
-    rightline=true,
-    topline=false,
-    bottomline=false,
-    linewidth=0.6ex,
-    innertopmargin=2.5ex,
-    innerbottommargin=1.5ex,
-    innerrightmargin=1.5ex,
-    innerleftmargin=1.5ex,
-    skipabove=\baselineskip,
-    skipbelow=\baselineskip,
-    leftmargin=-2.1ex,
-    rightmargin=-2.1ex,
-}
-
-\mdfdefinestyle{UoESomProof}{
-    linecolor=UoESoMGrey,
-    backgroundcolor=UoESoMGrey!5!white,
-    leftline=true,
-    rightline=true,
-    topline=false,
-    bottomline=false,
-    linewidth=0.6ex,
-    innertopmargin=1.5ex,
-    innerbottommargin=1.5ex,
-    innerrightmargin=1.5ex,
-    innerleftmargin=1.5ex,
-    skipabove=\baselineskip,
-    skipbelow=\baselineskip,
-    leftmargin=-2.1ex,
-    rightmargin=-2.1ex,
-}
-
-\mdfdefinestyle{UoESomDefinition}{
-    linecolor=UoESoMLightBlue,
-    backgroundcolor=UoESoMLightBlue!3!white,
-    leftline=true,
-    rightline=true,
-    topline=false,
-    bottomline=false,
-    linewidth=0.6ex,
-    innertopmargin=2.5ex,
-    innerbottommargin=1.5ex,
-    innerrightmargin=1.5ex,
-    innerleftmargin=1.5ex,
-    skipabove=\baselineskip,
-    skipbelow=\baselineskip,
-    leftmargin=-2.1ex,
-    rightmargin=-2.1ex,
-}
-
-\mdfdefinestyle{UoESomExample}{
-    linecolor=UoESoMDarkBlue,
-    backgroundcolor=UoESoMDarkBlue!3!white,
-    leftline=true,
-    rightline=true,
-    topline=false,
-    bottomline=false,
-    linewidth=0.6ex,
-    innertopmargin=2.5ex,
-    innerbottommargin=1.5ex,
-    innerrightmargin=1.5ex,
-    innerleftmargin=1.5ex,
-    skipabove=\baselineskip,
-    leftmargin=-2.1ex,
-    rightmargin=-2.1ex,
-    %skipbelow=\baselineskip
-}
-
-
-\surroundwithmdframed[style=UoESomDefinition]{definition}
-\surroundwithmdframed[style=UoESomStatement]{proposition}
-\surroundwithmdframed[style=UoESomStatement]{lemma}
-\surroundwithmdframed[style=UoESomStatement]{theorem}
-\surroundwithmdframed[style=UoESomStatement]{corollary}
-\surroundwithmdframed[style=UoESomProof]{proof}
-\surroundwithmdframed[style=UoESomExample]{example}
 
     % General style
     
@@ -243,6 +139,18 @@
 
 
 \fi
+
+% === Hack to fix incorrect spacing before mdframed theorem in TeXLive 2024
+\usepackage{ifpdf}
+\newlength\thmboxoffset
+\ifpdftex
+    \def\gettexliveversion#1(#2 #3 #4#5#6#7#8)#9\relax{#4#5#6#7}
+    \edef\texliveversion{\expandafter\gettexliveversion\pdftexbanner\relax}
+    \ifnum\texliveversion=2024
+      \setlength{\thmboxoffset}{\parskip}
+    \fi
+\fi
+% ===
 
 \theoremstyle{definition}
 \ifcsname chapter\endcsname
@@ -277,6 +185,60 @@
 }
 \makeatother
 
+% Theorem styles (sequential numbering, indexed on chapter (if it exists) or section)
+% PDF-only settings
+% Official UoE brand colours
+\definecolor{UoESoMGrey}{HTML}{c6d1d6}
+\definecolor{UoESoMLightBlue}{HTML}{009baa}
+\definecolor{UoESoMDarkOrange}{HTML}{c66005}
+\definecolor{UoESoMDarkBlue}{HTML}{002654}
+
+\usepackage{mdframed}
+
+\mdfsetup{
+    leftline=true,
+    rightline=true,
+    topline=false,
+    bottomline=false,
+    linewidth=0.6ex,
+    innertopmargin=\dimexpr\thmboxoffset+\parskip\relax,
+    innerbottommargin=0.8\parskip,
+    innerrightmargin=1.5ex,
+    innerleftmargin=1.5ex,
+    skipabove=1.5\parskip,
+    skipbelow=0.2\parskip,
+    leftmargin=-2.1ex,
+    rightmargin=-2.1ex
+}
+
+% Define styles for mdframed
+\mdfdefinestyle{UoESomStatement}{
+    linecolor=UoESoMDarkOrange,
+    backgroundcolor=UoESoMDarkOrange!3!white
+}
+
+\mdfdefinestyle{UoESomProof}{
+    linecolor=UoESoMGrey,
+    backgroundcolor=UoESoMGrey!5!white
+}
+
+\mdfdefinestyle{UoESomDefinition}{
+    linecolor=UoESoMLightBlue,
+    backgroundcolor=UoESoMLightBlue!3!white
+}
+
+\mdfdefinestyle{UoESomExample}{
+    linecolor=UoESoMDarkBlue,
+    backgroundcolor=UoESoMDarkBlue!3!white
+}
+
+\surroundwithmdframed[style=UoESomDefinition]{definition}
+\surroundwithmdframed[style=UoESomStatement]{proposition}
+\surroundwithmdframed[style=UoESomStatement]{lemma}
+\surroundwithmdframed[style=UoESomStatement]{theorem}
+\surroundwithmdframed[style=UoESomStatement]{corollary}
+\surroundwithmdframed[style=UoESomProof]{proof}
+\surroundwithmdframed[style=UoESomExample]{example}
 
 %\usepackage[inkscapelatex=false]{svg}
 %% Macros and environments
